# gpt2-in-mlx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: dataloader.py  model_params.py  tokenizer.py
tests/: test_dataloader.py  test_imports.py  test_tokenizer.py
